- FIXED: Scale of Multiblock and Entity displays not having the same effect as expected.